Fix regression in calculating an animated image's start time. https://bugs.webkit.org/show_bug.cgi?id=35115

Reviewed by Adam Barth.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::startAnimation):



Canonical link: https://commits.webkit.org/46344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55039 268f45cc-cd09-0410-ab3c-d52691b4dbfc